--- a/requirements.txt
+++ b/requirements.txt
@@ -99,8 +99,8 @@ sympy==1.13.1
 threadpoolctl==3.6.0
 tifffile==2025.3.13
 tomli==2.0.1
-torch==2.5.1+cu121
-torch-geometric==2.6.1
+# torch==2.5.1+cu121
+# torch-geometric==2.6.1
 tqdm==4.67.1
 triton==3.1.0
 typeguard==4.3.0
